--- a/post-service.properties
+++ b/post-service.properties
@@ -1,6 +1,6 @@
 server.port=8762
 
-spring.datasource.url=jdbc:mysql://localhost:3306/post_service_db?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/pus_post_service?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
 
