--- a/story-service.properties
+++ b/story-service.properties
@@ -1,6 +1,6 @@
 server.port=8763
 
-spring.datasource.url=jdbc:mysql://localhost:3306/story_service_db?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/pus_story_service?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
 
