--- a/post-service.properties
+++ b/post-service.properties
@@ -4,5 +4,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/pus_post_service?createDatabas
 spring.datasource.username=root
 spring.datasource.password=
 
-application.config.upload-url=http://localhost:8760/api/v1/uploads
-application.config.user-url=http://localhost:8760/api/v1/users
+application.config.upload-url=http://localhost:8093/uploads
+application.config.user-url=http://localhost:8090/users
