--- a/gateway-service.properties
+++ b/gateway-service.properties
@@ -4,27 +4,27 @@ spring.cloud.gateway.discovery.locator.enabled=true
 # Route configuration
 spring.cloud.gateway.routes[0].id=post-service
 spring.cloud.gateway.routes[0].uri=lb://POST-SERVICE
-spring.cloud.gateway.routes[0].predicates[0]=Path=/api/v1/posts/**
+spring.cloud.gateway.routes[0].predicates[0]=Path=/posts/**
 
 spring.cloud.gateway.routes[1].id=post-service-bookmarks
 spring.cloud.gateway.routes[1].uri=lb://POST-SERVICE
-spring.cloud.gateway.routes[1].predicates[0]=Path=/api/v1/bookmarks/**
+spring.cloud.gateway.routes[1].predicates[0]=Path=/bookmarks/**
 
 spring.cloud.gateway.routes[2].id=story-service
 spring.cloud.gateway.routes[2].uri=lb://STORY-SERVICE
-spring.cloud.gateway.routes[2].predicates[0]=Path=/api/v1/stories/**
+spring.cloud.gateway.routes[2].predicates[0]=Path=/stories/**
 
 spring.cloud.gateway.routes[3].id=upload-service
 spring.cloud.gateway.routes[3].uri=lb://UPLOAD-SERVICE
-spring.cloud.gateway.routes[3].predicates[0]=Path=/api/v1/uploads/**
+spring.cloud.gateway.routes[3].predicates[0]=Path=/uploads/**
 
 spring.cloud.gateway.routes[4].id=user-service-users
 spring.cloud.gateway.routes[4].uri=lb://USER-SERVICE
-spring.cloud.gateway.routes[4].predicates[0]=Path=/api/v1/users/**
+spring.cloud.gateway.routes[4].predicates[0]=Path=/users/**
 
 spring.cloud.gateway.routes[5].id=user-service-auth
 spring.cloud.gateway.routes[5].uri=lb://USER-SERVICE
-spring.cloud.gateway.routes[5].predicates[0]=Path=/api/v1/auth/**
+spring.cloud.gateway.routes[5].predicates[0]=Path=/auth/**
 
 
 # CORS Configuration
