--- a/user-service.properties
+++ b/user-service.properties
@@ -11,7 +11,7 @@ app.jwtExpirationMs=86400000
 frontend.url=http://localhost:3000
 frontend.url2=http://localhost:5173
 
-application.config.upload-url=http://localhost:8760/api/v1/uploads
-application.config.post-url=http://localhost:8760/api/v1/posts
-application.config.bookmark-url=http://localhost:8760/api/v1/bookmarks
-application.config.story-url=http://localhost:8760/api/v1/stories
+application.config.upload-url=http://localhost:8093/uploads
+application.config.post-url=http://localhost:8091/posts
+application.config.bookmark-url=http://localhost:8091/bookmarks
+application.config.story-url=http://localhost:8092/stories
