--- a/application.properties
+++ b/application.properties
@@ -7,19 +7,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.servlet.multipart.max-file-size=128KB
 spring.servlet.multipart.max-request-size=128KB
 spring.jpa.open-in-view=true
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
-
-
-
-
-
-
-
-
-
-
-
 
 #################### verify this part
 #logging
