--- a/gateway-service.properties
+++ b/gateway-service.properties
@@ -19,7 +19,7 @@ spring.cloud.gateway.routes[3].uri=lb://UPLOAD-SERVICE
 spring.cloud.gateway.routes[3].predicates[0]=Path=/uploads/**
 
 spring.cloud.gateway.routes[4].id=user-service-users
-spring.cloud.gateway.routes[4].uri=lb://USER-SERVICE
+#spring.cloud.gateway.routes[4].uri=lb://USER-SERVICE
 spring.cloud.gateway.routes[4].predicates[0]=Path=/users/**
 
 spring.cloud.gateway.routes[5].id=user-service-auth
