--- a/gateway-service.properties
+++ b/gateway-service.properties
@@ -23,7 +23,7 @@ spring.cloud.gateway.routes[4].uri=lb://USER-SERVICE
 spring.cloud.gateway.routes[4].filters[0]=RewritePath=/user(?<segment>/?.*), /user-service/${segment}
 spring.cloud.gateway.routes[4].filters[1].name=CircuitBreaker
 spring.cloud.gateway.routes[4].filters[1].args.name=circuitBreakerInstance
-spring.cloud.gateway.routes[4].filters[1].args.fallbackUri=forward:/fallback
+spring.cloud.gateway.routes[4].filters[1].args.fallbackUri=forward:/fallback/users
 spring.cloud.gateway.routes[4].predicates[0]=Path=/users/**
 
 spring.cloud.gateway.routes[5].id=user-service-auth
