--- a/gateway-service.properties
+++ b/gateway-service.properties
@@ -11,3 +11,5 @@ spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedOrigins=http://
 spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedMethods=GET, POST, PUT, DELETE, OPTIONS
 spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedHeaders=*
 spring.cloud.gateway.globalcors.cors-configurations.[/**].allowCredentials=true
+
+message=Hello From Config's Gateway Service
