--- a/post-service.properties
+++ b/post-service.properties
@@ -6,3 +6,8 @@ spring.datasource.password=
 
 application.config.upload-url=http://localhost:8093/uploads
 application.config.user-url=http://localhost:8090/users
+openapi.service.version=1.0.0
+openapi.service.url=http://localhost:8080
+springdoc.swagger-ui.path=/post-service/swagger-ui.html
+
+message=Hello From Config's Post Service
