--- a/user-service.properties
+++ b/user-service.properties
@@ -14,3 +14,9 @@ frontend.url2=http://localhost:5173
 application.config.upload-url=http://localhost:8093/uploads
 application.config.post-url=http://localhost:8091/posts
 application.config.story-url=http://localhost:8092/stories
+
+openapi.service.version=1.0.0
+openapi.service.url=http://localhost:8080
+springdoc.swagger-ui.path=/user-service/swagger-ui.html
+
+message=Hello From Config's User Service
