--- a/story-service.properties
+++ b/story-service.properties
@@ -6,3 +6,9 @@ spring.datasource.password=
 
 application.config.upload-url=http://localhost:8093/uploads
 application.config.user-url=http://localhost:8090/users
+
+openapi.service.version=1.0.0
+openapi.service.url=http://localhost:8080
+springdoc.swagger-ui.path=/story-service/swagger-ui.html
+
+message=Hello From Config's Story Service
