--- a/story-service.properties
+++ b/story-service.properties
@@ -9,6 +9,6 @@ application.config.user-url=http://localhost:8090/users
 
 openapi.service.version=1.0.0
 openapi.service.url=http://localhost:8080
-springdoc.swagger-ui.path=/story-service/swagger-ui.html
+springdoc.swagger-ui.path=/swagger-ui.html
 
 message=Hello From Config's Story Service
