--- a/upload-service.properties
+++ b/upload-service.properties
@@ -5,5 +5,5 @@ spring.servlet.multipart.enabled=true
 message=Hello From Config's Post Service
 openapi.service.version=1.0.0
 openapi.service.url=http://localhost:8080
-springdoc.swagger-ui.path=/upload-service/swagger-ui.html
+springdoc.swagger-ui.path=/swagger-ui.html
 message=Hello From Config's Upload Service
