--- a/user-service.properties
+++ b/user-service.properties
@@ -17,6 +17,6 @@ application.config.story-url=http://localhost:8092/stories
 
 openapi.service.version=1.0.0
 openapi.service.url=http://localhost:8080
-springdoc.swagger-ui.path=/user-service/swagger-ui.html
+springdoc.swagger-ui.path=/swagger-ui.html
 
 message=Hello From Config's User Service
