--- a/upload-service.properties
+++ b/upload-service.properties
@@ -2,8 +2,7 @@ server.port=8093
 
 storage.location=upload-dir
 spring.servlet.multipart.enabled=true
-message=Hello From Config's Post Service
 openapi.service.version=1.0.0
-openapi.service.url=http://localhost:8080
+openapi.service.url=http://gateway:8080
 springdoc.swagger-ui.path=/swagger-ui.html
 message=Hello From Config's Upload Service
