--- a/user-service.properties
+++ b/user-service.properties
@@ -11,12 +11,13 @@ app.jwtExpirationMs=86400000
 frontend.url=http://localhost:3000
 frontend.url2=http://localhost:5173
 
-application.config.upload-url=http://localhost:8093/uploads
-application.config.post-url=http://localhost:8091/posts
-application.config.story-url=http://localhost:8092/stories
+application.config.post-url=http://post:8091/posts
+application.config.story-url=http://story:8092/stories
+application.config.upload-url=http://upload:8093/uploads
+application.config.user-url=http://user:8090/users
 
 openapi.service.version=1.0.0
-openapi.service.url=http://localhost:8080
+openapi.service.url=http://gateway:8080
 springdoc.swagger-ui.path=/swagger-ui.html
 
 message=Hello From Config's User Service
