--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,6 @@
 eureka.instance.hostname=localhost
 spring.cloud.config.override-system-properties=false
-eureka.instance.client.serviceUrl.defaultZone=http://${eureka.instance.hostname}:8761/eureka/
+eureka.instance.client.serviceUrl.defaultZone=http://discovery:8761/eureka/
 
 # Database Properties
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
