--- a/post-service.properties
+++ b/post-service.properties
@@ -1,13 +1,14 @@
 server.port=8091
 
-spring.datasource.url=jdbc:mysql://localhost:3306/pus_post_service?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://post_db:3306/pus_post_service?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
 
-application.config.upload-url=http://localhost:8093/uploads
-application.config.user-url=http://localhost:8090/users
+application.config.upload-url=http://upload:8093/uploads
+application.config.user-url=http://user:8090/users
+
 openapi.service.version=1.0.0
-openapi.service.url=http://localhost:8080
+openapi.service.url=http://gateway:8080
 springdoc.swagger-ui.path=/swagger-ui.html
 
 message=Hello From Config's Post Service
