for docker fixed

--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,4 @@
-eureka.instance.hostname=localhost
+eureka.instance.hostname=discovery
 spring.cloud.config.override-system-properties=false
 eureka.instance.client.serviceUrl.defaultZone=http://discovery:8761/eureka/
 
