--- a/user-service.properties
+++ b/user-service.properties
@@ -1,6 +1,6 @@
 server.port=8090
 
-spring.datasource.url=jdbc:mysql://localhost:3306/pus_user_service?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://user_db:3306/pus_user_service?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
 
